--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -352,7 +352,7 @@ tab_loos <- model_loos %>%
     subtitle = md("Model performance and comparison using leave-one-out cross-validation")
   ) %>% 
   tab_source_note(
-    md("*Note*. Outcomes of the leave-one-out cross-validation procedure. Each row indicates the values of the expected log-predicted density (*ELPD*), leave-one-out information creterion (*LOO-IC*), and the difference in *ELPD* (*LOO-diff*) between each model and the inmediately simpler model. Each value is accompanied by a standard error (*SE*) indicating the uncertainty of its estimate.")
+    md("*Note*. Outcomes of the leave-one-out cross-validation procedure. Each row indicates the values of the expected log-predicted density (*ELPD*), leave-one-out information criterion (*LOO-IC*), and the difference in *ELPD* (*LOO-diff*) between each model and the inmediately simpler model. Each value is accompanied by a standard error (*SE*) indicating the uncertainty of its estimate.")
   ) %>% 
   fmt_missing(everything(), missing_text = "-") %>% 
   fmt_number(2:7) %>% 
@@ -403,7 +403,7 @@ tab_loos <- model_loos %>%
     style = cell_borders(sides = "top", color = "white"),
     locations = cells_body(columns = 1:7)
   ) %>% 
-  gtsave(here("Figures", "loos.png"))
+  gtsave(here("img", "loos.png"))
 
 include_graphics(here("img", "loos.png"))
 
@@ -715,7 +715,7 @@ ggplot(m, aes(lv, .epred, colour = pthn, fill = pthn)) +
 ```
 
 
-The conditional intra-class correlation (*ICC*) for items was `r percent(icc_conditional, accuracy = 0.01)`, indicating that responses from different participants to the same item were, on average, more similar to each other than responses to other items [@gelman2006data]. Item-level intercepts showed remarkable variability (*SD* = `r percent(sds$sd_word_intercept$.value, accuracy = 0.01)`, 95% CrI = [`r percent(sds$sd_word_Intercept$.lower, accuracy = 0.01)`, `r percent(sds$sd_word_Intercept$.upper, accuracy = 0.01)`]), indicating that participants' accuracy differed substantially across words: some words were correctly translated nearly always (e.g., Spanish *tomate*-*tomato*, /tomate/-/təmɑːtoʊ/, `r percent(word_example$tomate$estimate, accuracy = 0.01)`, 95% CrI = [`r percent(word_example$tomate$q2_5, accuracy = 0.01)`, `r percent(word_example$tomate$q97_5, accuracy = 0.01)`]), while others were almost never translated correctly (e.g., Catalan *colom*-*pigeon*, /kulom/-/pɪdʒɪn/, `r percent(word_example$colom$estimate, accuracy = 0.01)`, 95% CrI = [`r percent(word_example$colom$q2_5, accuracy = 0.01)`, `r percent(word_example$colom$q97_5, accuracy = 0.01)`]). Participant-level intercepts also showed high variability (*SD* = `r percent(sds$sd_participant_intercept$.value, accuracy = 0.01)`, 95% CrI = [`r percent(sds$sd_participant_intercept$.lower, accuracy = 0.01)`, `r percent(sds$sd_participant_intercept$.upper, accuracy = 0.01)`]), suggesting that average translation accuracy also varied significantly across participants. Finally, participant-level estimated slopes showed less variability: *SD* of $Frequency$, $PTHN$, $Levenshtein$, $PTHN \times Levenshtein$, and $Levenshtein \times Group 2$ ranged between `r percent(participant_ranef_range[1], accuracy = 0.01)`, and `r percent(participant_ranef_range[2], accuracy = 0.01)`. The participant-level estimated slopes of the $Leveshtein \times Group 1$ interaction are an exception, though (*SD* = `r percent(sds$sd_participant_lv_group_en_gvs_spa$.value, accuracy = 0.01)`, 95% CrI = [`r percent(sds$sd_participant_lv_group_en_gvs_spa$.lower, accuracy = 0.01)`, `r percent(sds$sd_participant_lv_group_en_gvs_spa$.upper, accuracy = 0.01)`]). This indicates that the impact of phonological similarity ($Levenshtein$) on the difference in accuracy between English and Spanish natives differed substantially across participants. 
+The conditional intra-class correlation (*ICC*) for items was `r percent(icc_conditional, accuracy = 0.01)`, indicating that responses from different participants to the same item were, on average, more similar to each other than responses to other items [@gelman2006data]. Item-level intercepts showed remarkable variability (*SD* = `r percent(sds$sd_word_intercept$.value, accuracy = 0.01)`, 95% CrI = [`r percent(sds$sd_word_intercept$.lower, accuracy = 0.01)`, `r percent(sds$sd_word_intercept$.upper, accuracy = 0.01)`]), indicating that participants' accuracy differed substantially across words: some words were correctly translated nearly always (e.g., Spanish *tomate*-*tomato*, /tomate/-/təmɑːtoʊ/, `r percent(word_example$tomate$estimate, accuracy = 0.01)`, 95% CrI = [`r percent(word_example$tomate$q2_5, accuracy = 0.01)`, `r percent(word_example$tomate$q97_5, accuracy = 0.01)`]), while others were almost never translated correctly (e.g., Catalan *colom*-*pigeon*, /kulom/-/pɪdʒɪn/, `r percent(word_example$colom$estimate, accuracy = 0.01)`, 95% CrI = [`r percent(word_example$colom$q2_5, accuracy = 0.01)`, `r percent(word_example$colom$q97_5, accuracy = 0.01)`]). Participant-level intercepts also showed high variability (*SD* = `r percent(sds$sd_participant_intercept$.value, accuracy = 0.01)`, 95% CrI = [`r percent(sds$sd_participant_intercept$.lower, accuracy = 0.01)`, `r percent(sds$sd_participant_intercept$.upper, accuracy = 0.01)`]), suggesting that average translation accuracy also varied significantly across participants. Finally, participant-level estimated slopes showed less variability: *SD* of $Frequency$, $PTHN$, $Levenshtein$, $PTHN \times Levenshtein$, and $Levenshtein \times Group 2$ ranged between `r percent(participant_ranef_range[1], accuracy = 0.01)`, and `r percent(participant_ranef_range[2], accuracy = 0.01)`. The participant-level estimated slopes of the $Leveshtein \times Group 1$ interaction are an exception, though (*SD* = `r percent(sds$sd_participant_lv_group_en_gvs_spa$.value, accuracy = 0.01)`, 95% CrI = [`r percent(sds$sd_participant_lv_group_en_gvs_spa$.lower, accuracy = 0.01)`, `r percent(sds$sd_participant_lv_group_en_gvs_spa$.upper, accuracy = 0.01)`]). This indicates that the impact of phonological similarity ($Levenshtein$) on the difference in accuracy between English and Spanish natives differed substantially across participants. 
 
 
 Finally, participant-level effects showed weak Pearson correlations overall (<10%), with three exceptions. The estimated correlation between the intercepts and the slopes of $Frequency$ was `r percent(corr_data$intercept$estimate_frequency_zipf, accuracy = 0.01)` (95% CrI = [`r percent(corr_data$intercept$q2_5_frequency_zipf, accuracy = 0.01)`, `r percent(corr_data$intercept$q97_5_frequency_zipf, accuracy = 0.01)`], $BF_{Cor \neq 0}$ = `r `round(h_cor_intercept_frequency, 2)`). The estimated correlation between the slopes of $Frequency$ and $Levenshtein \times Group 1$ was `r percent(corr_data$frequency_zipf$estimate_lv_group1, accuracy = 0.01)` (95% CrI = [`r percent(corr_data$frequency_zipf$q2_5_lv_group1, accuracy = 0.01)`, `r percent(corr_data$frequency_zipf$q97_5_lv_group1, accuracy = 0.01)`], $BF_{Cor \neq 0}$ = `r round(h_cor_frequency_zipf_lv_group1, 2)`). The estimated correlation between the intercepts and the slopes of $PTHN$ was `r percent(corr_data$intercept$estimate_pthn, accuracy = 0.01)` (95% CrI = [`r percent(corr_data$intercept$q2_5_pthn, accuracy = 0.01)`, `r percent(corr_data$intercept$q97_5_pthn, accuracy = 0.01)`], $BF_{Cor \neq 0}$ = `r round(h_cor_intercept_pthn, 2)`). The large uncertainty associated with these estimates, however, prevents us from interpreting the size of these correlations as practically meaningful.
