--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -324,6 +324,28 @@
   publisher={ASHA}
 }
 
+@article{gooskens2004perceptive,
+  title={Perceptive evaluation of Levenshtein dialect distance measurements using Norwegian dialect data},
+  author={Gooskens, Charlotte and Heeringa, Wilbert},
+  journal={Language variation and change},
+  volume={16},
+  number={3},
+  pages={189--207},
+  year={2004},
+  publisher={Cambridge University Press}
+}
+
+@article{damerau1964technique,
+  title={A technique for computer detection and correction of spelling errors},
+  author={Damerau, Fred J},
+  journal={Communications of the ACM},
+  volume={7},
+  number={3},
+  pages={171--176},
+  year={1964},
+  publisher={ACM New York, NY, USA}
+}
+
 @misc{boersma2021praat,
   title={Praat: doing phonetics by computer [Computer program]. Version 6.1. 44},
   author={Boersma, Paul and Weenink, David},
